src/objects/Budget__c.object
<CustomObject>
    <description>R5 - New Custom Object -Financial Target and Expectation Budgets</description>
    <fields>
        <fullName>Account_Plan_Year__c</fullName>
        <description>R5 - Account Plan Year</description>
        <label>Sales Targets &amp; Results Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R5 - Master Detail Relationship with Account Plan</description>
        <inlineHelpText>Description of the Account Plan  such that other users can understand the scope.</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Sales Targets and Results</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_USD__c</fullName>
        <description>R5 - Actual Sales USD</description>
        <inlineHelpText>Current Sales as per the Account Plan timeline</inlineHelpText>
        <label>Actual Sales KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Market_CAPEX_MUSD__c</fullName>
        <description>R5 - Available Market CAPEX MUSD</description>
        <inlineHelpText>ABB Available Account Capital Expenditures for the Product types in this Account Plan</inlineHelpText>
        <label>Available Account CAPEX KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Market_OPEX_MUSD__c</fullName>
        <description>R5 - Available Market OPEX MUSD</description>
        <inlineHelpText>ABB Available Account Operational Expenditures for the Product types in this Account Plan</inlineHelpText>
        <label>Available Account OPEX KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Spend_MUSD_1_c__c</fullName>
        <description>R5 - Available Spend MUSD</description>
        <formula>Available_Market_CAPEX_MUSD__c	+ Available_Market_OPEX_MUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of the available CAPEX and OPEX spend</inlineHelpText>
        <label>Available Spend KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Budget_USD__c</fullName>
        <description>R5 - Backup Budget USD</description>
        <label>Backup Budget USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>Business_Unit__c</fullName>
        <description>R5 - Business Unit</description>
        <inlineHelpText>Select ABB Business Unit from the picklist</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>DMDR - Drives and Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG - Motors &amp; Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC - Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO - Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMSU - Sundry DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBP - Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS - Breakers &amp; Switches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCP - Control Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCW - Protection, Connection &amp; Wire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPLS - LV Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMV - Medium Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU - Sundry LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACT - Control Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA - Marine &amp; Ports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMP - Measurement &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG - Oil, Gas &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG - Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPI - Process Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASU - Sundry PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU - Turbocharging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA - Grid Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI - Grid Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS - Grid Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV - High Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU - Sundry PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR - Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCCO - Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCRE - Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCVA - Various</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5 -  Country</description>
        <formula>TEXT(Account_Plan__r.Account__r.Primary_Address_Country__c )</formula>
        <inlineHelpText>Defaults to GIS Country for this Location</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>R5 - Division</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship with Product Group</description>
        <inlineHelpText>The enter PG will automatically update both the assigned Division &amp; BU in the above fields for this particular PG</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Sales Targets and Results</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 Product</description>
        <inlineHelpText>The enter Product Line will automatically update the assigned Division,  BU and PG in the above fields for this particular Product Line</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Targets and Results</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_Level__c</fullName>
        <inlineHelpText>Segmentation Level must always match to the values entered on the fields DIV,BU,Product Group,Product. For Example;Choose &quot;Division&quot; on segmentation level and populate up to DIV drop down list.</inlineHelpText>
        <label>Segment Level</label>
        <picklist>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_of_Available_Wallet__c</fullName>
        <description>R5 - Share of available wallet</description>
        <formula>Share_of_Wallet_MUSD__c/Available_Spend_MUSD_1_c__c</formula>
        <inlineHelpText>ABB Orders / Total Available Account Spend</inlineHelpText>
        <label>Share of Available Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_MUSD__c</fullName>
        <description>R5 - Share of Wallet MUSD currency Value</description>
        <label>ABB Orders KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_Per__c</fullName>
        <description>R5 - Share of Wallet</description>
        <formula>(Share_of_Wallet_MUSD__c /  Total_Spend_MUSD_1__c )</formula>
        <inlineHelpText>ABB Orders / Total Account Spend</inlineHelpText>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_Budget_USD__c</fullName>
        <description>R5 - Target Budget USD</description>
        <label>Target Budget USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Sales_MUSD__c</fullName>
        <description>R5 - Target Sales USD</description>
        <label>Target Sales KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Available_Account_Spend_Summary__c</fullName>
        <formula>HYPERLINK(&quot;https://abb.sharepoint.com/sites/FACETrainingandChangeManagement/_layouts/15/WopiFrame.aspx?sourcedoc={62A174DB-0336-4135-92C4-36AB4E097748}&amp;file=Strategic%20Sales%20-%20Total%20and%20Available%20%20Account%20Spend%20-%20Help%20Final%20-%20March%202016.pptx&amp;action=default&quot;, &quot;Are you aware of the Total and Available Account Spend Definition?&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total &amp; Available Account Spend Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Market_CAPEX_MUSD__c</fullName>
        <description>R5 - Total Market CAPEX MUSD</description>
        <inlineHelpText>Total Account Capital Expenditure for the Product types in this Account Plan</inlineHelpText>
        <label>Total Account CAPEX KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Market_OPEX_MUSD__c</fullName>
        <description>R5 - Total Market OPEX MUSD</description>
        <inlineHelpText>Total Account Operational Expenditure for the Product types in this Account Plan</inlineHelpText>
        <label>Total Account OPEX KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spend_MUSD_1__c</fullName>
        <formula>Total_Market_CAPEX_MUSD__c + Total_Market_OPEX_MUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Account Spend KUSD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <description>R5 Unique Check</description>
        <label>Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sales Targets and Results</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>Product_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SalesTargets-Results{0000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Targets and Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ABB_Orders_MUSD_less_than_the_TotalSpend</fullName>
        <active>true</active>
        <errorConditionFormula>Share_of_Wallet_MUSD__c &gt;= Total_Spend_MUSD_1__c</errorConditionFormula>
        <errorMessage>“ABB Orders MUSD” must be less than the sum of “Total Account CAPEX MUSD” and &quot;Total Account OPEX MUSD&quot;&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Segment_Level_Validation</fullName>
        <active>true</active>
        <description>R5: Segment level must always match the hierarchy entered by the user in Division/Business Unit/Product Group/Product Line</description>
        <errorConditionFormula>OR( 
(TEXT(Business_Unit__c) != NULL &amp;&amp; TEXT(Segment_Level__c) == &apos;Division&apos;),
( (Product_Group__c != NULL || Product__c != NULL) &amp;&amp; (TEXT(Segment_Level__c) == &apos;Division&apos; || TEXT(Segment_Level__c) == &apos;Business Unit&apos;)),
( (Product__c != NULL) &amp;&amp; (TEXT(Segment_Level__c) != &apos;Product Line&apos;))
)</errorConditionFormula>
        <errorMessage>Segment level must always match the hierarchy entered by the user in Division/Business Unit/Product Group/Product Line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_plan_year_comparison</fullName>
        <active>true</active>
        <description>R5</description>
        <errorConditionFormula>IF ( TEXT(Account_Plan_Year__c) != NULL &amp;&amp; TEXT(Account_Plan__r.Account_Plan_Year__c) != NULL, VALUE(TEXT(Account_Plan_Year__c)) &lt; (VALUE(TEXT(Account_Plan__r.Account_Plan_Year__c))- 3), FALSE)</errorConditionFormula>
        <errorMessage>Sales Targets &amp; Results Year must be either greater than Account Plan Year or past three years from Account Plan Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Available_CAPEX_less_than_Total_CAPEX</fullName>
        <active>true</active>
        <description>R5 - Available Market CAPEX MUSD must be less than Total Market CAPEX MUSD.</description>
        <errorConditionFormula>Available_Market_CAPEX_MUSD__c &gt; Total_Market_CAPEX_MUSD__c</errorConditionFormula>
        <errorDisplayField>Available_Market_CAPEX_MUSD__c</errorDisplayField>
        <errorMessage>Available Account CAPEX MUSD must be less than Total Account CAPEX MUSD!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Available_OPEX_less_than_Total_OPEX</fullName>
        <active>true</active>
        <description>R5 - Available Market OPEX MUSD must be less than Total Market OPEX MUSD.</description>
        <errorConditionFormula>Available_Market_OPEX_MUSD__c &gt; Total_Market_OPEX_MUSD__c</errorConditionFormula>
        <errorDisplayField>Available_Market_OPEX_MUSD__c</errorDisplayField>
        <errorMessage>Available Account OPEX MUSD must be less than Total Account OPEX MUSD!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Financial_Target_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Financial Target and Expectation.</description>
        <errorConditionFormula>ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>